<resources>
    <!-- activity_main -->
    <string name="app_name">HonoursApp</string>
    <string name="orderToTable">Order to Table</string>
    <string name="orderForCollection">Order for Collection</string>
    <string name="bookTable">Book Table</string>

    <!-- activity_order -->
    <string name="checkout">Proceed to Checkout</string>

    <!-- activity_register_sign_in -->
    <string name="reg">Register Now</string>
    <string name="acc">If you do not have an account, register below.</string>
    <string name="sign">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="Password">Password</string>
    <string name="PasswordConf">Confirm Password</string>

    <!-- activity_view_item_template -->
    <string name="desc">Description:</string>
    <string name="allergens">Allergens:</string>
    <string name="protein">Protein Choice:</string>
    <string name="add">Add to Order</string>
    <string name="qty">Quantity:</string>

    <!-- activity_basket -->
    <string name="basket">Your order items:</string>
    <string name="pay">Finish and Pay</string>

    <!-- activity_payment -->
    <string-array name="tables_array">
        <item>Bar</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
        <item>Table 5</item>
        <item>Table 6</item>
        <item>Table 7</item>
        <item>Table 8</item>
        <item>Table 9</item>
        <item>Table 10</item>
        <item>Table 11</item>
        <item>Table 14</item>
        <item>Table 16</item>
    </string-array>
    <string name="tableArea">Table number (or bar)</string>
    <string name="pickup">Pickup Name</string>
    <string name="payment">Place Order</string>

</resources>