<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBurger"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <Button
            android:id="@+id/btnOrderToTable"
            android:text="@string/orderToTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="165dp"/>

        <Button
            android:id="@+id/btnOrderForCollection"
            android:text="@string/orderForCollection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btnBookTable"
            android:text="@string/bookTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

   

</androidx.constraintlayout.widget.ConstraintLayout>