<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewItemTemplate">

    <!-- Whole page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Top panel-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:orientation="horizontal"
            android:background="@color/main">

            <Button
                android:id="@+id/btnBurgerBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_burger_bar"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/mainWhite"/>

        </LinearLayout>

        <!--Info Panel-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergens"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvAllergens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvProteins"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textStyle="bold"/>

            <ListView
                android:id="@+id/lvProtein"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>



        </LinearLayout>

        <!-- Bottom Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/btnAdd"
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/mainWhite"/>

            <Button
                android:id="@+id/btnBasket"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_corners"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>